--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,43 @@
 h1 {
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
     line-height: 1.5;
     font-weight: 900;
+    color: #fff;
 }
 
-#title{
+#title {
     background-color: #ff4c68;
 }
 
-.container-fluid{
+.container-fluid {
     padding: 3% 15%;
     
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.navbar-brand {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.navbar {
+    padding: 0 0 4.5rem;
+    justify-content: space-between;
+}
+
+.nav-item {
+    padding: 0 18px;
+    
+    
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    font-family: 'Montserrat' , sans-serif;
+
 }
