--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
 /* TITLE AND NAVBAR */
 
+body {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
 #title {
     background-color: #ff4c68;
-    p
+    text-align: left;
 }
 
 #title h1 {
-    font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
     line-height: 1.5;
     font-weight: 900;
@@ -20,7 +24,6 @@
 .navbar-brand {
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
-    font-weight: bold;
 }
 
 .navbar {
@@ -34,7 +37,6 @@
 
 .nav-link {
     font-size: 1.2rem;
-    font-family: 'Montserrat', sans-serif;
 }
 
 .navbar-nav {
@@ -50,6 +52,17 @@
     transform: rotate(25deg);
     position: absolute;
     right: 20%;
+}
+
+@media (max-width: 990px) {
+    .title-img {
+        position: static;
+        transform: rotate(0);
+        width: 80%;
+    }
+    #title h1 {
+        text-align: center;
+    }
 }
 
 /* FEATURES */
@@ -73,23 +86,19 @@
 #features h3 {
     font-size: 1.3rem;
     font-weight: bold;
-    font-family: 'Montserrat', sans-serif;
 }
 
 #features p {
     color: #8f8f8f;
-    font-family: 'Montserrat', sans-serif;
 }
 
 .features-box {
-    text-align: center;
     padding: 4%;
 }
 
 /* TESTIMONIAL */
 
 #testimonials {
-    text-align: center;
     background-color: #ef8172;
     color: #fff;
 }
@@ -97,7 +106,6 @@
 #testimonials h2 {
     font-size: 3rem;
     line-height: 1.5;
-    font-family: 'Montserrat-Bold', sans-serif;
     font-weight: 900;
 }
 
@@ -115,8 +123,7 @@
 
 #press {
     background-color: #ef8172;
-    text-align: center;
-    padding-bottom: 3%;
+   padding-bottom: 3%;
 }
 
 .press-img {
@@ -132,19 +139,43 @@
 
 .pricing-columns {
     padding: 3% 2%;
-    text-align: center;
+
 }
 
 #pricing h2 {
-    font-family: 'Montserrat', sans-serif;
     font-weight: 600;
 }
 
-#pricing p {
-    font-family: 'Montserrat', sans-serif;
+#pricing h3 {
+    font-weight: 500;
 }
 
-#pricing h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
+/* CALL TO ACTION */
+
+#cta {
+    background-color: #ff4c68;
+    color: white;
+    padding: 7% 15%;
+  
+}
+
+#cta h3 {
+    font-weight: 900;
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+/* FOOTER */
+
+#footer {
+    padding: 7% 15%;
+    background-color: #fff;
+}
+
+#footer p {
+    color: #8f8f8f;
+}
+
+.footer-icons {
+    margin: 20px 10px;
 }
